reactive-demo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reactive-demo
  labels:
    app: reactive-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reactive-demo
  template:
    metadata:
      name: reactive-demo
      labels:
        app: reactive-demo
    spec:
      volumes:
        - name: configs
          configMap:
            name: reactive-demo
      containers:
        - name: reactive-demo
          image: moheyeldinbadr/reactive-demo
          imagePullPolicy: Always
#          volumeMounts:
#            - mountPath: "/"
#              name: configs
      restartPolicy: Always
