mongodb.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mongodb
  labels:
    app: mongodb
spec:
  containers:
    - name: mongodb
      image: mongo
      imagePullPolicy: IfNotPresent
  restartPolicy: Always
  
---
kind: Service
apiVersion: v1
metadata:
  name: mongodb
spec:
  selector:
    app: mongodb
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
      nodePort: 37017

  type: NodePort
