reactive-demo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: reactive-demo
spec:
  selector:
    app: reactive-demo
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
